--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts"
+  },
   "devDependencies": {
     "@types/mongoose": "^5.10.3",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "apollo-server": "^2.19.1",
     "class-validator": "^0.12.2",
     "graphql": "^15.4.0",
     "mongoose": "^5.11.10",
